--- a/src/app.yaml
+++ b/src/app.yaml
@@ -25,5 +25,9 @@ handlers:
 - url: /static
   static_dir: static
 
+- url: /jobs/.*
+  script: main.py
+  login: admin
+  
 - url: /.*
   script: main.py
